Complete 02-class-id-selectors practice
Completed the second practice in intro
to css, which focused on class and id
selectors.

At first I didn't realize I needed to
create my own ideas, but then realized
there wasn't another way to select
individual elements of the same class.

I  think one thing for me to improve on
is noticing where I can create class that
spans multiple types of elements.

I am proud that I realized I did not need
to create a class to get all of the odd
numbered elements (which all happened to be
paragraphs) to behave the same way.

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,20 @@
 /* Add CSS Styling */
+p, #third{
+    background-color: #F57B62;
+    font-family: 'Verdana', 'DejaVu Sans', 'sans-serif';  
+}
+
+#third {
+    font-size: 24px;
+}
+
+#second {
+    color: rgb(98, 103, 245);
+    font-size: 36px
+}
+
+#fourth{
+    background-color: hsl(145, 88%, 67%);
+    font-size: 24px;
+    font-weight: bold
+}
