--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,14 @@
 /* Add CSS Styling */
+.both {
+    font-size: 28px;
+    font-family: Helvetica, "Times New Roman", sans-serif
+}
+
+#first {
+    background-color: black;
+    color: hsl(0, 100%, 100%)
+}
+
+#second {
+    background-color: rgb(231,235,21);
+}
