Complete 05-descendant-combinator
Completed the fifth and final exercise of
the intro-to-css module in the foundations
subfolder.

Again, very simple.

My biggest takeaway was that when creating
descendant combinators, you can use the elements,
classes, or a combination of both.

--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -1,1 +1,7 @@
 /* Add CSS Styling */
+.container .text {
+    color: #EB1515;
+    background-color: rgb(255,255,36);
+    font-size: 20px;
+    text-align: center
+}
